frontend gui gemacht